--- a/2-practice-exercises/index.html
+++ b/2-practice-exercises/index.html
@@ -10,8 +10,7 @@
 
 <body>
 
-    <script src="1-10.js"></script>
-    <script src="11-20.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
