add input validation

--- a/9-inputs-and-tables/index.html
+++ b/9-inputs-and-tables/index.html
@@ -18,19 +18,19 @@
         <form action="#">
             <div class="form-inputs">
                 <label for="name">Name: </label>
-                <input type="text" id="name">
+                <input required type="text" id="name">
 
                 <label for="surname">Surname: </label>
-                <input type="text" id="surname">
+                <input required type="text" id="surname">
 
                 <label for="email">E-mail: </label>
-                <input type="email" id="email">
+                <input required type="email" id="email">
 
                 <label for="password">Password: </label>
-                <input type="password" id="password">
+                <input required type="password" id="password">
 
                 <label for="password-repeat">Confirm your password:</label>
-                <input type="password" id="password-repeat">
+                <input required type="password" id="password-repeat">
             </div>
             <button id="submit-button">Submit</button>
         </form>
