--- a/11-more-fetch/index.html
+++ b/11-more-fetch/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <div class="container">
-        <h1>Welcome to our blog</h1>
+        <h1>Welcome!</h1>
+        <button id="new-post" type="button" class="btn btn-primary"> </button>
         <div id="posts-container">
         </div>
     </div>
